--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Content/main.css">
 </head>
 <body>
-    <canvas id="canvas" width="850" height="600"></canvas>
+    <canvas id="game"></canvas>
 
     <!-- JavaScript-->
     <!--Libraries-->
@@ -16,24 +16,42 @@
     <script src="./Scripts/lib/TweenJS/lib/tweenjs.js"></script>
     <script src="./Scripts/lib/SoundJS/lib/soundjs.js"></script>
     <script src="./Scripts/lib/PreloadJS/lib/preloadjs.js"></script>
-
     <!--Game Scripts-->
+    <script src="./Scripts/managers/assets.js"></script>
     <script src="./Scripts/config/config.js"></script>
-
+    
     <script src="./Scripts/objects/gameObject.js"></script>
+    <script src="./Scripts/objects/walls/leftWallTop.js"></script>
+    <script src="./Scripts/objects/walls/leftWallBottom.js"></script>
+    <script src="./Scripts/objects/walls/wallBottom.js"></script>
+    <script src="./Scripts/objects/walls/wallTop.js"></script>
+    <script src="./Scripts/objects/walls/rightWallBath.js"></script>
+    <script src="./Scripts/objects/walls/mainGateWallLeft.js"></script>
+    <script src="./Scripts/objects/walls/mainGateWallRight.js"></script>
+    <script src="./Scripts/objects/walls/rightWall.js"></script>
+    <script src="./Scripts/objects/walls/insideHorizontalWall.js"></script>
+    <script src="./Scripts/objects/walls/insideVerticalWall.js"></script>
+    <script src="./Scripts/objects/window/windowLeft.js"></script>
+    <script src="./Scripts/objects/window/windowRight.js"></script>
     <script src="./Scripts/objects/label.js"></script>
+    <script src="./Scripts/objects/bgmap.js"></script>
     <script src="./Scripts/objects/button.js"></script>
+    <script src="./Scripts/objects/bullet.js"></script>
     <script src="./Scripts/objects/player.js"></script>
     <script src="./Scripts/objects/zombie.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
+    <script src="./Scripts/objects/game.js"></script>
 
     <script src="./Scripts/scenes/start.js"></script>
     <script src="./Scripts/scenes/play.js"></script>
     <script src="./Scripts/scenes/end.js"></script>
     
-    <script src="./Scripts/core/reference.js"></script>
-    <script src="./Scripts/core/keyBoardInput.js"></script>
-    <script src="./Scripts/core/collision.js"></script>
+   
+    <script src="./Scripts/managers/mouse.js"></script>
+    <script src="./Scripts/managers/vector.js"></script>
+    <script src="./Scripts/managers/keyBoardInput.js"></script>
+    <script src="./Scripts/managers/collision.js"></script>
+
     <script src="./Scripts/core/game.js"></script>
 </body>
 </html>
