--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <!-- JavaScript-->
     <!--Libraries-->
-    <script src="./Scripts/lib/EaselJS/lib/easeljs.js"></script>
-    <script src="./Scripts/lib/TweenJS/lib/tweenjs.js"></script>
-    <script src="./Scripts/lib/SoundJS/lib/soundjs.js"></script>
-    <script src="./Scripts/lib/PreloadJS/lib/preloadjs.js"></script>
+    <script src="./Scripts/lib/EaselJS/lib/easeljs-0.8.2.min.js"></script>
+    <script src="./Scripts/lib/TweenJS/lib/tweenjs-0.6.2.min.js"></script>
+    <script src="./Scripts/lib/SoundJS/lib/soundjs-0.6.2.min.js"></script>
+    <script src="./Scripts/lib/PreloadJS/lib/preloadjs-0.6.2.min.js"></script>
     <!--Game Scripts-->
     <script src="./Scripts/managers/assets.js"></script>
     <script src="./Scripts/config/config.js"></script>
@@ -41,6 +41,7 @@
     <script src="./Scripts/objects/zombie.js"></script>
     <script src="./Scripts/objects/scene.js"></script>
     <script src="./Scripts/objects/game.js"></script>
+    <script src="./Scripts/objects/background images/image.js"></script>
 
     <script src="./Scripts/scenes/start.js"></script>
     <script src="./Scripts/scenes/play.js"></script>
